--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 .layout {
   display: flex;
   flex-direction: column;
-  min-height: 80vh;
+  min-height: 95vh;
+}
+.layout .header {
+  flex: 0 0 50px;
 }
 
 .layout main {
   flex : 1 1 auto;
   border: 1px dashed lime;
+}
+
+.layout footer {
+  flex : 0 0 40px;
 }
