--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 .layout {
   display: flex;
   flex-direction: column;
@@ -14,4 +21,29 @@
 
 .layout footer {
   flex : 0 0 40px;
+}
+
+.navbar {
+  /* overflow: hidden; */
+  background-color: #333;
+  display : flex;
+}
+
+.navbar a {
+  /* float: left; */
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #04AA6D;
+  color: white;
 }
