--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-
+/* Layout */
 .layout {
   display: flex;
   flex-direction: column;
@@ -23,6 +23,7 @@
   flex : 0 0 40px;
 }
 
+/* Navbar */
 .navbar {
   /* overflow: hidden; */
   background-color: #333;
@@ -47,3 +48,4 @@
   background-color: #04AA6D;
   color: white;
 }
+
