--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,66 @@
   color: white;
 }
 
+/* Login form */
+
+.login {
+  max-width: 500px;
+  margin: auto;
+  border: 1px solid #eee;
+  padding: 1.5rem;
+  margin-top: 2rem;
+  border-radius: 1rem;
+}
+
+.login .container {
+  padding: 16px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.login input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+.login input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Overwrite default styles of hr */
+.login hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+/* Set a style for the submit button */
+.login .registerbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.login .registerbtn:hover {
+  opacity: 1;
+}
+
+/* Add a blue text color to links */
+.login a {
+  color: dodgerblue;
+}
+
+/* Set a grey background color and center the text of the "sign in" section */
+.login .signin {
+  background-color: #f1f1f1;
+  text-align: center;
+}
