--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,8 @@
 @import './scss/config';
 // include all of Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+.App {
+  max-width: 1200px;
+  margin: auto;
+}
